# lakebase-mcp

./: .gitignore  README.md  TESTING_SCENARIOS.md  app.yaml  governance.yaml.example  pyproject.toml  requirements.txt
deploy/: deploy.sh  register_mcp_catalog.py
eval/: evaluation.xml
server/: auth.py  config.py  db.py  main.py
server/governance/: __init__.py  policy.py  sql_guard.py  tool_guard.py
server/prompts/: templates.py
server/resources/: insights.py
server/tools/: branching.py  compute.py  endpoints.py  feature_store.py  instance.py  migration.py  monitoring.py  quality.py  query.py  query_optimization.py  schema.py  sync.py  synced_tables.py  uc_governance.py
server/utils/: errors.py  formatting.py  pagination.py
tests/: conftest.py  test_governance_policy.py  test_sql_governance.py  test_tool_governance.py
tests/test_e2e/: test_mcp_protocol.py
tests/test_integration/: test_auth.py  test_db_connection.py  test_tool_execution.py
tests/test_unit/: test_branching.py  test_compute.py  test_db_connection.py  test_errors.py  test_formatting.py  test_migration.py  test_query.py
ui/: app.yaml  build.py  deploy_to_databricks.py
ui/backend/: app.py
ui/backend/routers/: metadata.py
ui/frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/frontend/__tests__/: App.test.jsx  CategoryAccordion.test.jsx  ConnectionWizard.test.jsx  GovernanceMatrix.test.jsx  PricingCalculator.test.jsx  ProfileSelector.test.jsx  ToolCard.test.jsx  setup.jsx
ui/frontend/src/: App.jsx  main.jsx  theme.js
(+17 files in other folders)
